# ai_data_cleaner_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/routes/: process_routes.py  upload_routes.py
app/services/: data_cleaning.py
