[project]
name = "ai-data-cleaner-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.1",
    "openai==1.86.0",
    "openpyxl==3.1.5",
    "pandas==2.3.0",
    "python-dotenv>=1.1.0",
]

[tool.ai_data_cleaner_api]
deployment_name = "gpt-4o"